--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br><br><br><br>
     <div >
         <button class="Insta-Btn">
-            <a href="https://www.instagram.com/telangana_pixelator/" target="_blank">My Instagarm Account</a>
+            <a href="https://www.instagram.com/suhas_sharma_koheda/" target="_blank">My Instagarm Account</a>
         </button>
     </div>
     <br><br><br>
@@ -32,6 +32,12 @@
     <div >
         <button class="Git-Btn">
             <a href="https://github.com/suhassk-hash"target="_blank" >My Github Profile</a>
+        </button>
+    </div>
+    <br><br><br>
+    <div >
+        <button class="Insta-Btn">
+            <a href="https://telangana-pixelator.picfair.com/" target="_blank">My Store</a>
         </button>
     </div>
 </body>
