--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title > Suhas Koheda Photography Landing Page </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=EB+Garamond:ital@1&family=NTR&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">  
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="./Icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./Icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./Icons/favicon-16x16.png">
@@ -16,29 +15,30 @@
 </head>
 <body>
     <h2 class="header-text">Suhas Koheda Photography</h2>
-    <br><br><br><br>
+    <br>
     <div >
-        <button class="Insta-Btn">
-            <a href="https://www.instagram.com/suhas_sharma_koheda/" target="_blank">My Instagarm Account</a>
-        </button>
-    </div>
-    <br><br><br>
-    <div >
-        <button class="Web-Btn">
-            <a href="https://suhassk-hash.github.io/Suhas-Koheda-Photography/" target="_blank" >My Website</a>
-        </button>
-    </div>
-    <br><br><br>
-    <div >
-        <button class="Git-Btn">
-            <a href="https://github.com/suhassk-hash"target="_blank" >My Github Profile</a>
-        </button>
-    </div>
-    <br><br><br>
-    <div >
-        <button class="Insta-Btn">
-            <a href="https://telangana-pixelator.picfair.com/" target="_blank">My Store</a>
-        </button>
-    </div>
+        <div class="column">
+          <img src="./profilephoto.jpg" alt="">
+        </div> <br>
+        <div class="column">
+            <div>
+                <h1 class="Main-Page-Headings">About Suhas</h1>
+                <p class="Main-Page-Paragraphs">Suhas is a photographer from India. <br>He loves to capture Wildlife and also loves to travel around the world </p>
+              </div> 
+              <br>
+              <div class="Social-Icons">
+                <li><a class="active" href="https://bit.ly/skp-website" target="_blank"><img src="./Web-Icons/icons8-website-30.png" class="Nav-Icon" alt=""></a><p>My Website</p> </li>
+                <li><a class="active" href="https://bit.ly/skp-prints" target="_blank"><img src="./Web-Icons/icons8-print-30.png" class="Nav-Icon" alt=""></a><p>Buy Prints</p> </li>
+                <li><a class="active" href="https://bit.ly/skp-presets" target="_blank"><img src="./Web-Icons/icons8-dng-48.png" class="Nav-Icon" alt=""></a><p>Buy Presets</p> </li><br>
+                <li><a class="active" href="https://bit.ly/skp-instagram" target="_blank"><img src="./Web-Icons/icons8-instagram.gif"  class="Nav-Icon" alt=""></a><p>My Instagram</p> </li>
+                <li><a class="active" href="https://bit.ly/skp-500px" target="_blank"><img src="./Web-Icons/icons8-500px-32.png"  class="Nav-Icon" alt=""></a><p>My 500px - Account</p> </li>
+                <li><a class="active" href="https://bit.ly/skp-mail"target="_blank"><img src="./Web-Icons/icons8-mail-24.png" class="Nav-Icon" alt=""></a> <p>G-Mail Me</p></li><br>
+                <li><a class="active" href="#"target="_blank"><img src="./Web-Icons/icons8-twitter (1).gif" class="Nav-Icon" alt=""></a><p>My Twitter</p> </li>
+                <li><a class="active" href="#"target="_blank"><img src="./Web-Icons/icons8-facebook-80.png" class="Nav-Icon" alt=""></a> <p>My Facebook</p></li>
+                <li><a class="active" href="https://bit.ly/skp-github" target="_blank"><img src="./Web-Icons/icons8-github.gif" class="Nav-Icon" alt=""></a><p>My Github</p> </li><br>
+               
+            </div>
+        </div>
+</div>
 </body>
 </html>
